--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/Sqiel.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc-3.21.0.jar=H:\\Downloads\\sqlite-jdbc-3.21.0.jar
+file.reference.sqlite-jdbc-3.21.0.jar=sqlite-jdbc-3.21.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
